--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   media_kit: ^1.1.11
   media_kit_video: ^1.2.5
   provider: ^6.1.2
-  video_thumbnail: ^0.5.3
+  get_thumbnail_video: ^0.7.3
   path_provider: ^2.0.12
 
 dev_dependencies:
