--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   provider: ^6.1.2
   get_thumbnail_video: ^0.7.3
   path_provider: ^2.0.12
+  image_network: ^2.5.6
 
 dev_dependencies:
   flutter_test:
